--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "moleculer-db-adapter-mongo": "^0.4.15",
     "moleculer-db-adapter-mongoose": "^0.9.2",
     "moleculer-web": "^0.10.4",
-    "mongoose": "^6.11.2"
+    "mongoose": "^6.11.2",
+    "nodemon": "^3.0.1"
   },
   "engines": {
     "node": ">= 16.x.x"
