--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,6 @@ services:
       context: .
     image: gyomroote-app-api
     working_dir: /app
-    volumes:
-      - .:/app
-      - /app/node_modules
-    command: /bin/sh -c "npm install && npm run dev"
     env_file: docker-compose.env
     expose:
       - 3000
@@ -18,6 +14,7 @@ services:
       - 3000:3000
     depends_on:
       - redis
+      - mongo
 
   mongo:
     image: mongo:4
