--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "My Moleculer-based microservices project",
   "scripts": {
-    "dev": "moleculer-runner --repl --hot services/**/*.service.js",
+    "dev": "moleculer-runner --repl --hot services/**/*.service.js --envfile development.env",
     "start": "moleculer-runner",
     "cli": "moleculer connect Redis",
     "ci": "jest --watch",
     "test": "jest --coverage",
+    "dc:db": "docker-compose up mongo redis",
     "dc:up": "docker-compose up --build -d",
     "dc:logs": "docker-compose logs -f",
     "dc:down": "docker-compose down"
