Added email service

--- a/development.env
+++ b/development.env
@@ -8,3 +8,10 @@ TRANSPORTER=redis://localhost:6379
 CACHER=redis://localhost:6379
 
 MONGO_URI=mongodb://localhost/gyomroote-app-api
+
+EMAIL_SENDER_ADDRESS=grandmastar27@gmail.com
+
+SMTP_HOST=sandbox.smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_USER=87d30e1591971d
+SMTP_PASS=d00b3636d68abd
