--- a/gyomroote-web/package.json
+++ b/gyomroote-web/package.json
@@ -18,6 +18,7 @@
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.8.0",
 		"react-dom": "^18.2.0",
+		"react-flagkit": "^2.0.4",
 		"react-i18next": "^13.2.2",
 		"react-router-bootstrap": "^0.26.2",
 		"react-router-dom": "^6.15.0",
